css/style.css
h1, h2, h3, h4, h5, h6 {
	font-family: 'Poiret One', cursive;
}

h1 {
	font-size: 2.5em;
	color: #424242;
}

h2 {
	font-size: 1.9em;
	color: #540000;
	text-shadow: 1px 1px 3px #A6A6A6;
	margin: 0;
	padding: 1% 0 0 13.3%;
	text-align: left;
}

h3 {
	font-size: 1.6em;
	color: #540000;
	text-shadow: 1px 1px 3px #BDBDBD;
}

h5 {
	font-size: 1.3em;
	margin: 0;
}

h6 {
	font-size: 1em;
}

a {
	font-family: 'Cinzel', serif;
	color: #424242;
	text-decoration: none;
}

p {
	font-family: 'Open Sans Condensed', sans-serif;
	font-size: 1.17em;
	text-align: justify;
	margin: 0;
}

section {
	width: 100%;
	height: 100%;
}

table {
	width: 75%;
	margin: 1% auto;
}

nav {
	position: fixed;
	top: 0;
	z-index: 1;
	width: 100%;
	display: table;
	background-color: rgba(225, 227, 237, 1);
}

a li {
	font-size: 0.6em;
}

nav ul {
	display: table-cell;
	padding: .5% 4% .5%;
	text-align: right;
}

nav li {
	display: inline;
}

nav li:before {
	color: #C4C6CF;
	content: " | ";
	margin: 0 .7%;
}

nav li:first-child:before {
	content: '';
}

li a:hover {
	color: #850000;
	font-weight: 700;
	padding-top: 1.3%;
	border-top: 2px solid #850000;
}

nav .logo {
	padding: .5% 0 .5% 4%;
}

#intro h1 {
	color: #EDEBE1;
	text-shadow: 2px 2px 4px #000;
	margin: 34% 0;
}

#about p {
	display: inline-block;
	width: 48%;
	color: #2C2D33;
	padding: 2.5% 0;
}

#about h2 {
	display: inline-block;
	float: left;
	text-shadow: 1px 1px 3px #969696;
}

#sound-portfolio h2 {
	color: #BDBDBD;
	text-shadow: 1px 1px 3px #858585;
	padding: 1% 0 0 12%;
}

#contact h2 {
	text-align: center;
	padding: 1% 0;
}

#web-portfolio .project-info p {
	margin: 4% 10%;
	font-size: 1em;
}

#sound-portfolio .project-info p {
	margin: 2% 5% 1% 5%;
}

#intro .background {
	background-image: url('img/ERhodesFortTryonGWBridge_cropped.jpg');
		background-attachment: fixed;
}

#about .background {
	background-color: #C4C6CF;
	background-attachment: fixed;
}

#web-portfolio .background {
	background-image: url('img/web_pale_yellow4.jpg');
	background-color: #FFFFFA;
}

#web-portfolio .project-info {
	width: 33.9%;
	margin: 1.2% 0 0 3%;
}

#sound-portfolio .background {
	background-color: #2C2D33;
}

#sound-portfolio .project-info {
	width: 22.5%;
	margin: .8% 0 0 2%;
}

#contact .background {
	background-color: #EDEBE1;
	padding: 2% 0;
}

#contact .contact-buttons {
	margin-bottom: 2.5%;
}

.logo img {
	width: 35px;
	height: 35px;
	vertical-align: middle;
	margin-left: 2%;
}

.logo h3 {
	display: inline;
	vertical-align: middle;
	padding: 0 3%;
}

.project-info h5 {
	margin: 1.5% 0 0 2%;
	text-align: left;
}

.project-info h6 {
	margin: 6% 0 0 1%;
}

.project-info p {
	font-size: .9em;
}

.background {
	width: 100%;
	height: 100%;
	padding: 2% 0;
	background-position: center bottom;
	background-repeat: none;
	background-size: cover;
}

.logo {
	position: relative;
	display: table-cell;
}

.picture {
	width: 90%;
	height: auto;
	background-position: center bottom;
	background-repeat: none;
	background-size: cover;
	margin: 3% 0;
}

#web-portfolio .picture {
	padding: .2%;
	background-color: rgba(44, 45, 51, .8);
	box-shadow: 1px 1px 4px #2C2D33;
	border-radius: 1%;
}

#sound-portfolio .picture {
	padding: .2%;
	background-color: rgba(255, 255, 250, .3);
	box-shadow: 1px 1px 4px #FFFFFA;
	border-radius: 3%;
}

.content-container {
	display: table;
	table-layout: fixed;
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: relative;
}

.content {
	width: 100%;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}

.project-info {
	position: absolute;
	text-shadow: 2px 2px 4px #000;
	color: white;
	padding-bottom: 1%;
}

.hidden {
	display: none;
}

.dim-bkgnd {
	background-color: rgba(43, 43, 43, .6);
}

